[package]
name = "ks89-producer"
version = "1.1.0"
edition = "2024"
resolver = "3"

[[bin]]
name = "producer"
path = "src/main.rs"

[lib]
name = "producer"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"

[dependencies]
thiserror = "2.0.12"
anyhow = "1.0.98"
lapin = "^2.5.3"
tokio = { version = "^1.44.2", features = ["full"] }
tokio-executor-trait = "^2.1.3"
tokio-reactor-trait = "1.1.0"
paho-mqtt = "0.13.1"
libc = "0.2.170"
log = "^0.4.26"
log4rs = { version = "^1.3.0", features = ["console_appender", "rolling_file_appender"] }
dotenvy = "^0.15.7"
envy = "^0.4.2"
futures = "^0.3.31"

# To use Serialize and Deserialize traits, you must include Serde.
# The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.140"

[dev-dependencies]
# better looking rust assertions
pretty_assertions = "^1.4.1"
# include also serde_json with the feature 'preserve_order' to don't change the order of keys
# 'preserve_order' is required to compare results in a predictible way in testing
serde_json = { version = "^1.0.140", features = ["preserve_order"] }

