[package]
name = "ks89-producer"
version = "1.1.0"
edition = "2024"
resolver = "3"

[[bin]]
name = "producer"
path = "src/main.rs"

[lib]
name = "producer"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"

[dependencies]
thiserror = "2.0.16"
anyhow = "1.0.99"
lapin = { version = "3.2.1", features = ["unstable"] }
tokio = { version = "^1.47.1", features = ["full"] }
tokio-executor-trait = "3.1.0"
tokio-reactor-trait = "4.1.1"
paho-mqtt = "0.13.3"
libc = "0.2.175"
tracing = "^0.1.41"
tracing-appender = "^0.2.3"
tracing-subscriber = { version = "^0.3.20", features = ["env-filter"] }
dotenvy = "^0.15.7"
envy = "^0.4.2"
futures = "^0.3.31"

# To use Serialize and Deserialize traits, you must include Serde.
# The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.143"

[dev-dependencies]
# better looking rust assertions
pretty_assertions = "^1.4.1"
# include also serde_json with the feature 'preserve_order' to don't change the order of keys
# 'preserve_order' is required to compare results in a predictible way in testing
serde_json = { version = "^1.0.143", features = ["preserve_order"] }
test-log = {version = "0.2.18", features = ["trace"]}
